birthday shower initial commit

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,51 @@
-.App {
-  text-align: center;
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.content{
+    height: 100vh;
+    display: flex;
+   flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+body{
+    background-repeat: no-repeat;
+    object-fit:fill;
+    background-size: cover;
+    
+    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url("birth.jpg");
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.content .today{
+    background-color: pink;
+    padding: 20px;
+    width: 350px;
+    margin: 20px;
+    margin-bottom: 40px;
+    display: flex;
+    border-radius: 50px;
+    box-shadow:10px 12px 10px 20px pink;
+    flex-direction: column;
+    gap: 30px;
+    align-items: center;
 }
-
-.App-link {
-  color: #61dafb;
+.content .upcomming{
+    background-color: rgb(98, 221, 147);
+    padding: 20px;
+    margin: 20px;
+    box-shadow:10px 12px 10px 20px rgb(98, 221, 147);
+    display: flex;
+    width: 300px;
+    flex-direction: column;
+    gap: 30px;
+    align-items: center;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+ h1{
+    font-family: cursive;
+    opacity: 0.5
+    ;
+}
+span{
+    font-size: 20px;
 }
